<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <RelativeLayout
        android:id="@+id/navigation"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/user_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/head"/>
        
        <TextView
            android:id="@+id/main_page"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/user_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@color/colorButtonSelected"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/home_page"/>

        <TextView
            android:id="@+id/use_center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/main_page"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/user_center"/>

        <TextView
            android:id="@+id/custom_made"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/use_center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/user_custom"/>

        <TextView
            android:id="@+id/challenge"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/custom_made"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/user_challenge"/>

        <TextView
            android:id="@+id/club"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/challenge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:text="@string/user_club"/>

        <TextView
            android:id="@+id/connect_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:drawableStart="@drawable/ble_unconnect"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/ble_unconnect"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/navigation"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="#ff4a4a4a">

    </FrameLayout>

</RelativeLayout>