<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/make_plan"
            android:layout_marginBottom="40dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fragment1_layout_text1"
            android:text="@string/welcome_tips"/>

        <Button
            android:id="@+id/make_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/colorStartTrainingBtn"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/fragment1_layout_text2"
            android:text="@string/make_plan"/>

        <TextView
            android:id="@+id/free_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorStartTrainingBtn"
            android:textSize="@dimen/fragment1_layout_text1"
            android:text="@string/free_training"/>

    </RelativeLayout>

</FrameLayout>
