<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_pic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/homepage"/>

    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/home_pic"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/head"/>

    <ImageView
        android:id="@+id/emoji"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/emoji2"/>

    <LinearLayout
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/emoji"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tips1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:text="@string/tips1"/>

        <TextView
            android:id="@+id/tips2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorButtonBackground"
            android:textSize="26sp"
            android:text="@string/tips2"/>

    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/middle_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorTitleBackground">

        <TextView
            android:id="@+id/train_part"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="50dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:text="@string/training_record"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/middle_layout"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:background="@android:color/black">

        <LinearLayout
            android:id="@+id/bottom1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:gravity="start|center_vertical">

            <ImageView
                android:id="@+id/bottom1_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/speed"/>

            <TextView
                android:id="@+id/bottom1_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:text="@string/training_time1"/>

            <TextView
                android:id="@+id/bottom1_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginStart="10dp"
                android:textSize="26sp"
                android:text="00:00:00"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:gravity="start|center_vertical">

            <ImageView
                android:id="@+id/bottom2_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/complete"/>

            <TextView
                android:id="@+id/bottom2_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:text="@string/training_number"/>

            <TextView
                android:id="@+id/bottom2_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginStart="10dp"
                android:textSize="26sp"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:gravity="start|center_vertical">

            <ImageView
                android:id="@+id/bottom3_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/up"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:text="@string/training_resistance"/>

            <TextView
                android:id="@+id/bottom3_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#ffff8e00"
                android:textSize="26sp"
                android:text="0"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>