<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context="com.jht.homegym.HomePageActivity">


    <RelativeLayout
        android:layout_marginTop="12dp"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/userInfo_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/user_info"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"/>

        <Button
            android:id="@+id/connect_status"
            android:layout_width="424px"
            android:layout_height="96px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:text="@string/unconnect_status"
            android:textColor="@color/colorWhite"
            android:textSize="11sp"
            android:background="@drawable/unconnect"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/homepage_info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:text="@string/homepage_info1" />

    <TextView
        android:id="@+id/homepage_info2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:text="@string/homepage_info2" />

    <TextView
        android:id="@+id/homepage_info3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/colorRedFont"
        android:text=""/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/level_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_box"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Lv 3"
            android:textColor="@color/colorWhite"
            />

        <ImageView
            android:id="@+id/monday_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/complete"
            android:layout_marginLeft="6dp"
            />

        <ImageView
            android:id="@+id/tuesday_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uncomplete"
            android:layout_marginLeft="6dp"
            />

        <ImageView
            android:id="@+id/wednesday_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uncomplete"
            android:layout_marginLeft="6dp"
            />

        <ImageView
            android:id="@+id/thursday_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uncomplete"
            android:layout_marginLeft="6dp"
            />

        <ImageView
            android:id="@+id/friday_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uncomplete"
            android:layout_marginLeft="6dp"
            />

        <ImageView
            android:id="@+id/saturday_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uncomplete"
            android:layout_marginLeft="6dp"
            />

        <ImageView
            android:id="@+id/sunday_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/uncomplete"
            android:layout_marginLeft="6dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/homepage_gradient_up"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/create_textview"
            android:layout_marginLeft="12dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/create_plan"
            android:textColor="@color/colorTitleBackground"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/plan_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="00 min"
            android:layout_marginRight="12dp"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            />
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toLeftOf="@id/plan_time"
            android:src="@drawable/plan_time"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/homepage_gradient_down"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_plan"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="26dp"
            android:background="@drawable/add_plan"
            android:visibility="gone"
            />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/progress_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="78dp"
                android:layout_toEndOf="@+id/linearLayout"
                android:src="@drawable/progressbar_base" />

            <TextView
                android:id="@+id/workout_textview"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignRight="@id/progress_workout"
                android:text="0%"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/progress_workout"
                android:id="@+id/linearLayout">
            <ListView
                android:id="@+id/list_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
            </LinearLayout>

        </RelativeLayout>
        <Button
            android:id="@+id/start_plan"
            android:layout_height="36dp"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:text="@string/connect_equipment"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:background="@drawable/gradient_button"
            android:layout_marginBottom="16dp"
            />
    </LinearLayout>

        <ImageView
            android:layout_marginTop="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/exercise"/>
    </LinearLayout>


</LinearLayout>
